[package]
name = "swc-plugin-transform-imports"
version = "0.2.9"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
# debug = true
lto = true
# Optimize for size
opt-level = "z"
# Strip debug symbols
strip = "symbols"

[dependencies]
lazy_static = "1.4.0"
maplit = "1.0.2"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.82"
voca_rs = "1.15.2"
tracing = "0.1.40"
swc_common = { version = "0.33.25", features = ["concurrent"] }
swc_core = { version = "0.91.0", features = [
  "ecma_plugin_transform",
  "ecma_utils",
  "ecma_quote",
  "ecma_visit",
  "ecma_ast",
  "ecma_parser",
  "common",
] }

[dev-dependencies]
swc_core = { features = ["testing_transform"], version = "0.91.0" }
