[package]
name = "swc-plugin-another-transform-imports"
version = "1.14.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
# debug = true
lto = true
# Optimize for size
opt-level = "s"
# Strip debug symbols
strip = "symbols"

[dependencies]
lazy_static = "1.4.0"
maplit = "1.0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.145"
voca_rs = "1.15.2"
tracing = "0.1.43"
swc_core = { version = "37.0.0", features = [
  "ecma_plugin_transform",
  "__parser",
] }

[dev-dependencies]
swc_core = { features = ["testing_transform"], version = "37.0.0" }
